
xine-lib (1.1.11.1) 2008-??-??
  * Security fixes:
    - Integer overflows in FLV, Qt, Real, WC3Movie, Matroska and FILM
      demuxers, allowing remote attackers to trigger heap overflows and
      possibly execute arbitrary code. (CVE-2008-1482)
  * Added a few more memory allocation checks to the above demuxers.
  * WAV file playback fix: don't assume that the first chunk is "fmt ".

xine-lib (1.1.11) 2008-03-19
  * Security fixes:
    - Array Indexing Vulnerability in sdpplin_parse(). (CVE-2008-0073)
  * Reworked the plugin directory naming so that external plugins don't have
    to be rebuilt for every release. We now use a naming scheme based on the
    API/ABI versioning, checking older directories - with this release, the
    plugin directory name is 1.20, and if this gets bumped to 1.21 in a
    future release, 1.20 will still be available for external plugins.
    (Any directories not 1.* won't be looked in.)
  * Made the version parsing much more reliable; it wasn't properly coping
    with four-part version numbers. This affects any program whose build
    scripts use xine-lib's automake macros.
  * Fixed an off-by-one in the FLAC security fix patch. This breakage was
    causing failure to play some files.
  * Support 16-bit big-endian DTS audio.
  * Improved frame snapshot API. (ABI extension.)
  * Re-add support for # (stream parameter separator) in raw filenames,
    without the bugs found in the original implementation.
    (This is a convenience feature for users only. Front ends which rely on
    it for functions like subtitle file detection must instead use file://
    MRLs; if they don't, we consider them to be buggy.)
  * Fixed long delay when closing stream on dual core systems [Bug #33]
  * DVD playback improvement: don't trust the file sizes.
  * Build fixes for use with recent ffmpeg.

xine-lib (1.1.10.1) 2008-02-07
  * Security fixes:
    - Array index vulnerability which may allow remote attackers to execute